# proyecto_f1tenth_lizbeth

./: README.md  sim.yaml
liz_controlador_v2/: package.xml  setup.cfg  setup.py
liz_controlador_v2/liz_controlador_v2/: contador_vueltas_node.py  seguidor_gap_node.py
maps/: Budapest.yaml
