<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>liz_controlador_v2</name>
  <version>0.1.0</version>
  <description>Controlador SeguidorGap y nodo Contador de Vueltas para F1Tenth (Budapest).</description>

  <maintainer email="lizbeth@example.com">lizbeth</maintainer>
  <license>MIT</license>

  <!-- Dependencias necesarias -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>ackermann_msgs</depend>
  <depend>std_msgs</depend>
  <depend>numpy</depend>
  <depend>scipy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
